Deckblatt hinzugefügt, tu logo verschoben

--- a/Ausarbeitung/Anhang.tex
+++ b/Ausarbeitung/Anhang.tex
@@ -1,5 +1,7 @@
 \section*{Anhang}
+\addcontentsline{toc}{section}{Anhang}
 \subsection*{Technische Aspekte der Simulation}
+\addcontentsline{toc}{subsection}{Technische Aspekte der Simulation}
 \begin{itemize}
 	\item Git
 	\item Java 8
@@ -9,7 +11,9 @@
 	\item Gebrauchsanweisung
 	\item Lizenzen
 \end{itemize}
-\subsection*{Analysediagramme}
+\subsection*{Streudiagramme der Ergebnisse}
+\addcontentsline{toc}{subsection}{Streudiagramme der Ergebnisse}
+Die Streudiagramme dieser Arbeit wurden mit der Website \href{http:plot.ly/plot}{Plotly} erzeugt.
 \subsubsection*{Einzelner lernender Fahrer}
 \begin{figure}[H]
 	\includegraphics[width=0.8\textwidth]{analyse/SingleMutant/blockcount1.png}
