--- a/Ausarbeitung/kopf.tex
+++ b/Ausarbeitung/kopf.tex
@@ -64,3 +64,5 @@
 \newcolumntype{L}[1]{>{\raggedright\arraybackslash}p{#1}} % linksbündig mit Breitenangabe
 \newcolumntype{C}[1]{>{\centering\arraybackslash}p{#1}} % zentriert mit Breitenangabe
 \newcolumntype{R}[1]{>{\raggedleft\arraybackslash}p{#1}}
+
+\setcounter{tocdepth}{2}
