Korrektur von Tippfehlern

--- a/Ausarbeitung/Einleitung.tex
+++ b/Ausarbeitung/Einleitung.tex
@@ -5,10 +5,11 @@ Es fehlt jedoch noch ein optimaler Parkplatz.\\
 Man beschäftigt sich seit Jahren damit, Strategien zu finden, die die Parkplatzwahl effizient und möglichst optimal machen. Es ist jedoch nicht einfach eine pauschale Antwort zu finden, da es viele Variablen gibt, die beachtet werden müssen, deren Verhalten aber kaum vorherzusagen ist.\\
 Dies wird deutlich, wenn man das Navigationssystem betrachtet. Dieses benötigt lediglich drei Informationen um einen sinnvollen Weg zu berechnen, den aktuellen Aufenthaltsort, den Zielort und das Straßennetz. Um den Weg weiter zu optimieren werden Informationen über zugelassene Höchstgeschwindigkeiten, den durchschnittlichen Verkehrsfluss und eventuelle Baustellen oder andere Hindernisse benötigt. Dies alles sind Informationen die relativ direkt zur Verfügung stehen und einfach berücksichtigt werden können. Außer es handelt sich bei dem Hindernis um einen Unfall. Dieser war nicht vorherzusehen und taucht daher nicht in der Berechnung auf.\\
  Optimale Berechnungen sind also dann einfach, wenn sie unabhängig von den anderen Verkehrsteilnehmern angestellt werden. Die Suche nach einem optimalen Parkplatz hängt jedoch maßgeblich von den Entscheidungen der Anderen ab. \\
-Zusätzlich spielt die Topologie des Parkplatzes eine Rolle. So kamen verschiedene Autoren mit unterschiedlichen Annahmen zu unterschiedlichen Ergebnissen.\\ %TODO Autoren einfügen(mit Ergebnis) 
+Zusätzlich spielt die Topologie des Parkplatzes eine Rolle. So kamen verschiedene Autoren mit unterschiedlichen Annahmen zu unterschiedlichen Ergebnissen. MacQueen und Miller kommen beispielsweise, bei der endlosen Straße zu dem Ergebnis, dass man bis auf eine bestimmte Distanz an die Destination heranfährt. Dabei hängt diese Distanz von der Anzahl der bereits belegten Parkplätze ab.\\
 
 Die vorliegende Arbeit ist eine Weiterentwicklung von Hutchinson et al. ,,Car Parking as a Game Between Simple Heuristics'', mit dem Ziel eine Anleitung für einen Autofahrer zu generieren. Diese soll ihm helfen, einen möglichst guten Parkplatz zu finden, wenn alle bzw. die meisten anderen Autofahrer einen zufälligen Parkplatz wählen.\\
-Zusätzlich wird untersucht, welche Strategien sich durchsetzten, falls alle Fahrer mit System einen Parkplatz suchen und wie sich dieses Ergebnis durch unterschiedliche Verkehrsaufkommen verändert.\\
+Zusätzlich wird untersucht, welche Strategien durchgeführt werden sollten, falls alle Fahrer mit System einen Parkplatz suchen und wie sich dieses Ergebnis durch unterschiedliche Verkehrsaufkommen verändert.\\
  Zuletzt soll untersucht werden, wie sich diese Untersuchungen im Unterricht erarbeiten lassen.\\
-  Um diese Ziele zu erreichen, wird zunächst die Simulation von Hutchinson et al. beschrieben, um danach eine eigene Simulation durchzuführen, die sich in manchen Annahmen von dieser unterscheidet. Danach werden die Ergebnisse verglichen und ausgewertet.\\
-  Zuletzt wird mit Hilfe des Lehrplans untersucht, wann Schülerinnen und Schüler diese Arbeit oder Teile davon selbstständig durchführen können und anhand dieser Informationen eine Unterrichtsreihe geplant.
+  Um diese Ziele zu erreichen, wird zunächst die Simulation von Hutchinson et al. beschrieben, um danach eine eigene Simulation durchzuführen, die sich in manchen Annahmen von dieser unterscheidet. Danach werden die Ergebnisse ausgewertet.\\
+  Zuletzt wird mit Hilfe des Lehrplans untersucht, wann Schülerinnen und Schüler diese Arbeit oder Teile davon selbstständig durchführen können und anhand dieser Informationen eine Unterrichtsreihe geplant.\\
+  
