--- a/Ausarbeitung/Schule.tex
+++ b/Ausarbeitung/Schule.tex
@@ -1,7 +1,8 @@
 \section{Einsatz in der Schule}
 \subsection{Einordnung in die Lehrpläne}
 
-Der Lehrplan legt viel Wert darauf, dass Schülerinnen und Schüler im Umgang mit Computern geschult werden. Dieser Umgang kann mit Hilfe eines Projektes, welches sich mit der vorliegenden Simulation befasst, erreicht werden. Zusätzlich ist der Prozess der Modellbildung aufgeführt, welcher auch mit Hilfe dieses Projektes verdeutlicht werden kann.\\
+Der Lehrplan %TODO Referenz Lehrplan? 
+legt viel Wert darauf, dass Schülerinnen und Schüler im Umgang mit Computern geschult werden. Dieser Umgang kann mit Hilfe eines Projektes, welches sich mit der vorliegenden Simulation befasst, erreicht werden. Zusätzlich ist der Prozess der Modellbildung aufgeführt, welcher auch mit Hilfe dieses Projektes verdeutlicht werden kann.\\
 Das Projekt kann innerhalb der Sekundarstufe II durchgeführt werden, im Bereich der Stochastik. \\
 In diesem Bereich sollen die Schülerinnen und Schüler des Leistungskurses sich mit Fragestellungen aus der beurteilenden Statistik befassen. Dies wird durch die Auswertung der Tabellen und Diagramme erreicht. 
 
@@ -19,3 +20,4 @@ Diese rohen Werte sollen von den Schülerinnen und Schülern so aufgearbeitet we
  Ist die Simulation dann vorbereitet kann sie durchgeführt werden. Die daraus entstandenen Daten können dann in einem Tabellenkalkulationsprogramm zu Diagrammen verarbeitet werden. 
 
 \subsection{Unterrichtsreihe}
+
