--- a/Ausarbeitung/Heuristiken.tex
+++ b/Ausarbeitung/Heuristiken.tex
@@ -1,7 +1,9 @@
 \section{Parken auf einem Parkplatz, aber wie?}
 
 Um die Ergebnisse auswerten zu können, muss zunächst entschieden werden, wann ein Parkplatz als gut angenommen wird.\\
-Im Folgenden werden alle Fahrer das gleiche Ziel haben. dieses befindet sich am Scheitelpunkt einer U-förmigen Straße. Lediglich an diesem Scheitelpunkt ist es möglich zu wenden, falls bis zu diesem Zeitpunkt noch kein Parkplatz gewählt wurde. Ein Fahrer fährt also den Parkplatz entlang, verfolgt seine Strategie und wählt gegebenenfalls einen Parkplatz. Findet er keinen bis er am Ziel angekommen ist, so fährt er um die Kurve und wieder an Parkplätzen vorbei und wählt, unabhängig von seiner vorherigen Strategie, den ersten freien Parkplatz den er findet. Auf dem Weg zur Destination kann man davon ausgehen, dass ein Fahrer sehen kann, ob der Parkplatz an dem er sich gerade befindet und der direkt daneben besetzt oder frei ist. Würde ein Fahrer nach seinem System einen Parkplatz wählen, der folgende Parkplatz jedoch frei ist, so wählt er diesen.
+Im Folgenden werden alle Fahrer das gleiche Ziel haben. dieses befindet sich am Scheitelpunkt einer U-förmigen Straße. Lediglich an diesem Scheitelpunkt ist es möglich zu wenden, falls bis zu diesem Zeitpunkt noch kein Parkplatz gewählt wurde. Ein Fahrer fährt also den Parkplatz entlang, verfolgt seine Strategie und wählt gegebenenfalls einen Parkplatz. Findet er keinen bis er am Ziel angekommen ist, so fährt er um die Kurve und wieder an Parkplätzen vorbei und wählt, unabhängig von seiner vorherigen Strategie, den ersten freien Parkplatz den er findet. Auf dem Weg zur Destination kann man davon ausgehen, dass ein Fahrer sehen kann, ob der Parkplatz an dem er sich gerade befindet und der direkt daneben besetzt oder frei ist. Würde ein Fahrer nach seinem System einen Parkplatz wählen, der folgende Parkplatz jedoch frei ist, so wählt er diesen.\\
+Diese Annahmen wurden von Hutchinson et al. übernommen. Die Hauptsächliche Veränderung liegt darin, dass angenommen wird, dass es verschiedene Verkehrsaufkommen gibt. Zusätzlich wird auf eine andere Art ,,gelernt''. Dies wird im späteren Verlauf der Arbeit genauer erläutert.\\
+Statt mithilfe einer Gamma-Verteilung, wird die Aufenthaltsdauer hier mit einer Normalverteilung modelliert. Dies ermöglicht es, die Simulation später mit Schülerinnen und Schülern zu besprechen, da die Normalverteilung in der Schule behandelt wird.
 
 Insgesamt gibt es viele Bewertungskriterien für einen guten Parkplatz. Fahranfänger könnten einen Parkplatz vorziehen, der sich relativ weit entfernt von der Destination befindet, wo jedoch nicht viel Betrieb ist, wodurch sie beim Aus- oder Einparken weniger Stress ausgesetzt sind. Im Sommer könnten Parkplätze die im Schatten liegen bevorzugt werden. Im Allgemeinen Fall kann man aber annehmen, dass ein Parkplatz dann als gut gilt, wenn er sich möglichst nah an der Destination befindet. Dadurch ist die Laufzeit zum Ziel optimiert und, falls es sich bei dem Ziel um ein Einkaufszentrum oder ähnliches handelt, müssen die Einkäufe auf dem Rückweg auch nur kurz getragen werden.
 
@@ -19,7 +21,7 @@ Falls $z_j>z_T$, wobei $z_T$ ein vom Fahrer gewählter Wert ist, wählt der Fahr
 \subsection{Das Lernen der Heuristikparameter}
 Um jeweils die beste Konfiguration einer Heuristik zu ermitteln, wird ein Lernalgorithmus während der Simulation angewandt. Hutchinson et al \textbf{cite} verwenden in ihrem Model dazu einen evolutionären Ansatz, bei dem in regelmäßigen Intervallen eine Selektion der erfolgreichsten Heuristiken stattfindet. Zu Beginn der Simulation erhält jeder Autofahrer eine zufällige Heuristik mit ebenfalls zufälliger Konfiguration. Nach festgelegten Intervallen werden die erfolgreichsten 10 Heuristiken ermittelt und diese auf die gesamte Population übertragen. Um eine fortlaufende Verbesserung der gefundenen Heurstikkonfigurationen zu gewährleisten, erhält ein festgelegter Prozentsatz der Population neue zufällig konfigurierte Heuristiken. Bei entsprechender Simulationslänge ergibt sich dadurch ein Gleichgewichtszustand von Heuristiken. 
 
-Diese Art des Lernens ist jedoch in der Reaalität schwer anwendbar. Es ist unwahrscheinlich, dass sich die gesamte Population, also alle Autofahrer der Umgebung, regelmäßig treffen und die zehn besten Strategien feststellen. Im Allgemeinen kann davon ausgegangen werden, dass keine produktive Kommunikation zwischen den Individuen stattfindet. Um dennoch eine optimale Konfiguration für eine Heurstik lernen zu können, muss sich das Lernen auf die Erfahrungen des Individuums beschränken. 
+Diese Art des Lernens ist jedoch in der Realität schwer anwendbar. Es ist unwahrscheinlich, dass sich die gesamte Population, also alle Autofahrer der Umgebung, regelmäßig treffen und die zehn besten Strategien feststellen. Im Allgemeinen kann davon ausgegangen werden, dass keine produktive Kommunikation zwischen den Individuen stattfindet. Um dennoch eine optimale Konfiguration für eine Heuristik lernen zu können, muss sich das Lernen auf die Erfahrungen des Individuums beschränken. 
 
 Aus diesem Grund erhält in dem hier verwendeten Modell jeder Fahrer ein Gedächtnis, aus dem sich eine Konfiguration generieren lässt. Das hier verwendete Gedächtnis ist beschränkt, vergisst priorisierend und aktualisiert die Effizienz der Konfigurationen. In diesem Zusammenhang bedeutet \emph{priorisierendes Vergessen}, dass eine neue Konfiguration nur dann in das Gedächtnis aufgenommen wird, wenn mit dieser ein besserer Parkplatz gefunden wurde als mit einer der bereits im Gedächtnis vorhandenen Konfigurationen. Die Konfiguration, mit der der schwächste Parkplatz gefunden wurde, wird dann durch die neue ersetzt. Befindet sich die neue Konfiguration bereits im Gedächtnis wird lediglich die Güte des gefundenen Parkplatzes aktualisiert (die \emph{Aktualisierung der Effizienz}).
 
@@ -30,6 +32,6 @@ Um nun aus dem Gedächtnis eine neue Konfiguration $x^*$ zu lernen wird das gewi
 \end{align}
  berechnet. Dabei steht $M$ für das Gedächtnis, $x\in M$ für die Konfigurationen im Gedächtnis und $\omega : M \rightarrow \mathbb{R}$ für die Gewichtsfunktion. Für die Simulation wurden zwei Gewichtsfunktionen in Betracht gezogen.
 
-In der ersten Variante wird die Parkfläche in vier äquvidistante Abschnitte unterteilt. Jeder der Abschnitte erhält ein Gewicht, wobei Abschnitte ein größeres Gewicht erhalten wenn sie näher am Ziel liegen. Die gelernte Konfiguration tendiert dann stärker in Richtung derer, mit deren Hilfe bessere Parkplätze gefunden wurden. Dieser Effekt ist bei entsprechnd großen Gewichtsdifferenzen zwischen den Quadranten am Größten. Liegen jedoch hauptsächlich oder nur Konfigurationen mit dem gleichen Gewicht vor verläuft das Lernen langsamer. 
+In der ersten Variante wird die Parkfläche in vier äquvidistante Abschnitte unterteilt. Jeder der Abschnitte erhält ein Gewicht, wobei Abschnitte ein größeres Gewicht erhalten wenn sie näher am Ziel liegen. Die gelernte Konfiguration tendiert dann stärker in Richtung derer, mit deren Hilfe bessere Parkplätze gefunden wurden. Dieser Effekt ist bei entsprechend großen Gewichtsdifferenzen zwischen den Quadranten am Größten. Liegen jedoch hauptsächlich oder nur Konfigurationen mit dem gleichen Gewicht vor verläuft das Lernen langsamer. 
 
-Um solche starken Sprünge in der Lerngeschwindigkeit zu vermeiden und um eine bessere differenzierung zwischen den Parkplätzen nahe des Ziels zu gewährleisten wird in der hier durchgeführten Simulation jedem Parkplatz eine individuelle Gewichtung zugeordnet. Die Gewichte betragen jeweils den Kehrwert der Entfernung des Parkplatzes zum Ziel. Der ideale Parkplatz direkt vor dem Ziel und mit Entfernung $0$ erhält das Gewicht $2$. Konfigurationen, mit denen in der Nähe des Ziels geparkt wurde, werden so wesentlich stärker gewichtet als diese, mit denen ein Parkplatz mit größerer Entfernung erreicht wurde. Gleichzeitig sind die Gewichte für die besten Parkplätze die mit den größten Differenzen zu ihren Vorgängern und Nachfolgern, womit eine hohe Lerngeschwindigkeit auch unter ähnlich guten Konfigurationen eintritt. 
+Um solche starken Sprünge in der Lerngeschwindigkeit zu vermeiden und um eine bessere Differenzierung zwischen den Parkplätzen nahe des Ziels zu gewährleisten wird in der hier durchgeführten Simulation jedem Parkplatz eine individuelle Gewichtung zugeordnet. Die Gewichte betragen jeweils den Kehrwert der Entfernung des Parkplatzes zum Ziel. Der ideale Parkplatz direkt vor dem Ziel und mit Entfernung $0$ erhält das Gewicht $2$. Konfigurationen, mit denen in der Nähe des Ziels geparkt wurde, werden so wesentlich stärker gewichtet als diese, mit denen ein Parkplatz mit größerer Entfernung erreicht wurde. Gleichzeitig sind die Gewichte für die besten Parkplätze die mit den größten Differenzen zu ihren Vorgängern und Nachfolgern, womit eine hohe Lerngeschwindigkeit auch unter ähnlich guten Konfigurationen eintritt. 
